--- a/themes/bigspring-light/layouts/partials/footer.html
+++ b/themes/bigspring-light/layouts/partials/footer.html
@@ -45,6 +45,10 @@
           {{ end }}
         </ul>
         {{ end }}
+        
+        <script type="text/javascript"
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
       </div>
     </div>
     <div class="border-top border-default text-center py-4 mt-4">
